tests/liquid/neg/operators/test-00.js
/*@ main :: () => { void | true } */ 
function main(){
  var x = 0;
  var y = x - 1;
  assert (0 < y);
}
